--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         position: fixed;
       }
            #gameContainer {
-	  
-        width: 100vw;
-        height: 100vh;
+	   left:10vw;
+        width: 80vw;
+        height: 90vh;
       }
       canvas {
         width: 100%;
